	Fixed a performance issue with the "is" method in DOMUtils. Patch contributed by Paul Bosselaar.
	Fixed bug where paste plugin wouldn't paste plain text properly when pasting using browser menus.
	Fixed bug where focusable SVG elements would throw an error since className isn't a proper string.
	Fixed bug where the preview plugin didn't properly support the document_base_url setting.
	Fixed so selection normalization gets executed more often to reduce incorrect UI states on Gecko.
	Fixed so the default action of closing the window on a form submission can be prevented using "preventDefault".
Version 4.0.19 (2014-03-11)
	Added support for CSS selector expressions in object_resizing option. Allows you to control what to resize.
	Added addToTop compatibility to compat3x plugin enables more legacy 3.x plugins to work properly.
	Fixed bug on IE where it wasn't possible to align images when they where floated left.
	Fixed bug where the indent/outdent buttons was enabled though readonly mode was enabled.
	Fixed bug where the nodeChanged event was fired when readonly mode was enabled.
	Fixed bug where events like blur could be fired to editor instances that where manually removed on IE 11.
	Fixed bug where IE 11 would move focus to menubar/toolbar when using the tab key in a form with an editor.
	Fixed bug where drag/drop in Safari on Mac didn't work properly due to lack of support for modern dataTransfer object.
	Fixed bug where the remove event wasn't properly executed when the editor instances where removed.
	Fixed bug where the selection change handler on inline editors would fail if the editor instance was removed.
Version 4.0.18 (2014-02-27)
	Fixed bug where images would get class false/undefined when initially created.
Version 4.0.17 (2014-02-26)
	Added much better wai-aria accessibility support when it comes to keyboard navigation of complex UI controls.